@@ -23,58 +23,74 @@
 
 @implementation GridBase
 
-@synthesize active;
-@synthesize reuseGrid;
-@synthesize texture;
-@synthesize grabber;
-@synthesize gridSize;
-@synthesize step;
+@synthesize reuseGrid=reuseGrid_;
+@synthesize texture=texture_;
+@synthesize grabber=grabber_;
+@synthesize gridSize=gridSize_;
+@synthesize step=step_;
 
 #define kTextureSize 512
 -(id)initWithSize:(ccGridSize)gSize
 {
 	if ( (self = [super init] ) )
 	{
-		active = NO;
-		reuseGrid = 0;
-		gridSize = gSize;
+		active_ = NO;
+		reuseGrid_ = 0;
+		gridSize_ = gSize;
 		
 		CGSize	win = [[Director sharedDirector] winSize];
 	
-		if ( self.texture == nil )
+		if ( texture_ == nil )
 		{
-			Texture2DPixelFormat	format = [Director sharedDirector].pixelFormat == kRGB565 ? kTexture2DPixelFormat_RGB565 : kTexture2DPixelFormat_RGBA8888;
+			Texture2DPixelFormat format = [Director sharedDirector].pixelFormat == kPixelFormatRGB565 ? kTexture2DPixelFormat_RGB565 : kTexture2DPixelFormat_RGBA8888;
 			
 			void *data = malloc((int)(kTextureSize * kTextureSize * 4));
 			memset(data, 0, (int)(kTextureSize * kTextureSize * 4));
 			
-			texture = [[Texture2D alloc] initWithData:data pixelFormat:format pixelsWide:kTextureSize pixelsHigh:kTextureSize contentSize:win];
+			texture_ = [[Texture2D alloc] initWithData:data pixelFormat:format pixelsWide:kTextureSize pixelsHigh:kTextureSize contentSize:win];
 			free( data );
 		}
 		
-		grabber = [[Grabber alloc] init];
-		[grabber grab:self.texture];
+		grabber_ = [[Grabber alloc] init];
+		[grabber_ grab:self.texture];
 
-		step.x = win.width / gridSize.x;
-		step.y = win.height / gridSize.y;
+		step_.x = win.width / gridSize_.x;
+		step_.y = win.height / gridSize_.y;
 	}
 	
 	return self;
 }
 - (NSString*) description
 {
-	return [NSString stringWithFormat:@"<%@ = %08X | Dimensions = %ix%i>", [self class], self, gridSize.x, gridSize.y];
+	return [NSString stringWithFormat:@"<%@ = %08X | Dimensions = %ix%i>", [self class], self, gridSize_.x, gridSize_.y];
 }
 
 - (void) dealloc
 {
 	CCLOG(@"cocos2d: deallocing %@", self);
 
-	[texture release];
-	[grabber release];
+	[self setActive: NO];
+
+	[texture_ release];
+	[grabber_ release];
 	[super dealloc];
 }
 
+// properties
+-(BOOL) active
+{
+	return active_;
+}
+
+-(void) setActive:(BOOL)active
+{
+	active_ = active;
+	if( ! active ) {
+		Director *director = [Director sharedDirector];
+		ccDirectorProjection proj = [director projection];
+		[director setProjection:proj];
+	}
+}
 
 // This routine can be merged with Director
 -(void)applyLandscape
@@ -135,12 +151,12 @@
 -(void)beforeDraw
 {
 	[self set2DProjection];
-	[grabber beforeRender:self.texture];
+	[grabber_ beforeRender:self.texture];
 }
 
 -(void)afterDraw:(Camera *)camera
 {
-	[grabber afterRender:self.texture];
+	[grabber_ afterRender:self.texture];
 	
 	[self set3DProjection];
 	[self applyLandscape];
@@ -200,7 +216,7 @@
 
 -(void)blit
 {
-	int n = gridSize.x * gridSize.y;
+	int n = gridSize_.x * gridSize_.y;
 	
 	glEnableClientState( GL_VERTEX_ARRAY);
 	glEnableClientState( GL_TEXTURE_COORD_ARRAY );
@@ -220,20 +236,20 @@
 	
 	int x, y, i;
 	
-	vertices = malloc((gridSize.x+1)*(gridSize.y+1)*sizeof(ccVertex3F));
-	originalVertices = malloc((gridSize.x+1)*(gridSize.y+1)*sizeof(ccVertex3F));
-	texCoordinates = malloc((gridSize.x+1)*(gridSize.y+1)*sizeof(CGPoint));
-	indices = malloc(gridSize.x*gridSize.y*sizeof(GLushort)*6);
+	vertices = malloc((gridSize_.x+1)*(gridSize_.y+1)*sizeof(ccVertex3F));
+	originalVertices = malloc((gridSize_.x+1)*(gridSize_.y+1)*sizeof(ccVertex3F));
+	texCoordinates = malloc((gridSize_.x+1)*(gridSize_.y+1)*sizeof(CGPoint));
+	indices = malloc(gridSize_.x*gridSize_.y*sizeof(GLushort)*6);
 	
 	float *vertArray = (float*)vertices;
 	float *texArray = (float*)texCoordinates;
 	GLushort *idxArray = (GLushort *)indices;
 	
-	for( y = 0; y < (gridSize.y+1); y++ )
+	for( y = 0; y < (gridSize_.y+1); y++ )
 	{
-		for( x = 0; x < (gridSize.x+1); x++ )
+		for( x = 0; x < (gridSize_.x+1); x++ )
 		{
-			int idx = (y * (gridSize.x+1)) + x;
+			int idx = (y * (gridSize_.x+1)) + x;
 			
 			vertArray[idx*3] = -1;
 			vertArray[idx*3+1] = -1;
@@ -243,21 +259,21 @@
 		}
 	}
 	
-	for( x = 0; x < gridSize.x; x++ )
+	for( x = 0; x < gridSize_.x; x++ )
 	{
-		for( y = 0; y < gridSize.y; y++ )
+		for( y = 0; y < gridSize_.y; y++ )
 		{
-			int idx = (y * gridSize.x) + x;
+			int idx = (y * gridSize_.x) + x;
 			
-			float x1 = x * step.x;
-			float x2 = x1 + step.x;
-			float y1 = y * step.y;
-			float y2 = y1 + step.y;
+			float x1 = x * step_.x;
+			float x2 = x1 + step_.x;
+			float y1 = y * step_.y;
+			float y2 = y1 + step_.y;
 			
-			GLushort a = x * (gridSize.y+1) + y;
-			GLushort b = (x+1) * (gridSize.y+1) + y;
-			GLushort c = (x+1) * (gridSize.y+1) + (y+1);
-			GLushort d = x * (gridSize.y+1) + (y+1);
+			GLushort a = x * (gridSize_.y+1) + y;
+			GLushort b = (x+1) * (gridSize_.y+1) + y;
+			GLushort c = (x+1) * (gridSize_.y+1) + (y+1);
+			GLushort d = x * (gridSize_.y+1) + (y+1);
 			
 			GLushort	tempidx[6] = { a, b, d, b, c, d };
 			
@@ -286,12 +302,12 @@
 		}
 	}
 	
-	memcpy(originalVertices, vertices, (gridSize.x+1)*(gridSize.y+1)*sizeof(ccVertex3F));
+	memcpy(originalVertices, vertices, (gridSize_.x+1)*(gridSize_.y+1)*sizeof(ccVertex3F));
 }
 
 -(ccVertex3F)vertex:(ccGridSize)pos
 {
-	int	index = (pos.x * (gridSize.y+1) + pos.y) * 3;
+	int	index = (pos.x * (gridSize_.y+1) + pos.y) * 3;
 	float *vertArray = (float *)vertices;
 	
 	ccVertex3F	vert = { vertArray[index], vertArray[index+1], vertArray[index+2] };
@@ -301,7 +317,7 @@
 
 -(ccVertex3F)originalVertex:(ccGridSize)pos
 {
-	int	index = (pos.x * (gridSize.y+1) + pos.y) * 3;
+	int	index = (pos.x * (gridSize_.y+1) + pos.y) * 3;
 	float *vertArray = (float *)originalVertices;
 	
 	ccVertex3F	vert = { vertArray[index], vertArray[index+1], vertArray[index+2] };
@@ -311,7 +327,7 @@
 
 -(void)setVertex:(ccGridSize)pos vertex:(ccVertex3F)vertex
 {
-	int	index = (pos.x * (gridSize.y+1) + pos.y) * 3;
+	int	index = (pos.x * (gridSize_.y+1) + pos.y) * 3;
 	float *vertArray = (float *)vertices;
 	vertArray[index] = vertex.x;
 	vertArray[index+1] = vertex.y;
@@ -320,10 +336,10 @@
 
 -(void)reuse
 {
-	if ( reuseGrid > 0 )
+	if ( reuseGrid_ > 0 )
 	{
-		memcpy(originalVertices, vertices, (gridSize.x+1)*(gridSize.y+1)*sizeof(ccVertex3F));
-		reuseGrid--;
+		memcpy(originalVertices, vertices, (gridSize_.x+1)*(gridSize_.y+1)*sizeof(ccVertex3F));
+		reuseGrid_--;
 	}
 }
 
@@ -359,7 +375,7 @@
 
 -(void)blit
 {
-	int n = gridSize.x * gridSize.y;
+	int n = gridSize_.x * gridSize_.y;
 	
 	glEnableClientState( GL_VERTEX_ARRAY);
 	glEnableClientState( GL_TEXTURE_COORD_ARRAY );
@@ -377,7 +393,7 @@
 	float width = (float)self.texture.pixelsWide;
 	float height = (float)self.texture.pixelsHigh;
 	
-	int numQuads = gridSize.x * gridSize.y;
+	int numQuads = gridSize_.x * gridSize_.y;
 	
 	vertices = malloc(numQuads*12*sizeof(GLfloat));
 	originalVertices = malloc(numQuads*12*sizeof(GLfloat));
@@ -390,14 +406,14 @@
 	
 	int x, y;
 	
-	for( x = 0; x < gridSize.x; x++ )
+	for( x = 0; x < gridSize_.x; x++ )
 	{
-		for( y = 0; y < gridSize.y; y++ )
+		for( y = 0; y < gridSize_.y; y++ )
 		{
-			float x1 = x * step.x;
-			float x2 = x1 + step.x;
-			float y1 = y * step.y;
-			float y2 = y1 + step.y;
+			float x1 = x * step_.x;
+			float x2 = x1 + step_.x;
+			float y1 = y * step_.y;
+			float y2 = y1 + step_.y;
 			
 			*vertArray++ = x1;
 			*vertArray++ = y1;
@@ -439,14 +455,14 @@
 
 -(void)setTile:(ccGridSize)pos coords:(ccQuad3)coords
 {
-	int idx = (gridSize.y * pos.x + pos.y) * 4 * 3;
+	int idx = (gridSize_.y * pos.x + pos.y) * 4 * 3;
 	float *vertArray = (float*)vertices;
 	memcpy(&vertArray[idx], &coords, sizeof(ccQuad3));
 }
 
 -(ccQuad3)originalTile:(ccGridSize)pos
 {
-	int idx = (gridSize.y * pos.x + pos.y) * 4 * 3;
+	int idx = (gridSize_.y * pos.x + pos.y) * 4 * 3;
 	float *vertArray = (float*)originalVertices;
 	
 	ccQuad3 ret;
@@ -457,7 +473,7 @@
 
 -(ccQuad3)tile:(ccGridSize)pos
 {
-	int idx = (gridSize.y * pos.x + pos.y) * 4 * 3;
+	int idx = (gridSize_.y * pos.x + pos.y) * 4 * 3;
 	float *vertArray = (float*)vertices;
 	
 	ccQuad3 ret;
@@ -468,12 +484,12 @@
 
 -(void)reuse
 {
-	if ( reuseGrid > 0 )
+	if ( reuseGrid_ > 0 )
 	{
-		int numQuads = gridSize.x * gridSize.y;
+		int numQuads = gridSize_.x * gridSize_.y;
 		
 		memcpy(originalVertices, vertices, numQuads*12*sizeof(GLfloat));
-		reuseGrid--;
+		reuseGrid_--;
 	}
 }
 
